# placepulse

./: Cargo.toml  flake.nix  local-ci.sh
.github/workflows/: ci.yml
crates/libs/lib-utils/src/: b64.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/src/: main.rs
crates/services/web-server/templates/: index.html
nc-server/: server.sh
