[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-utils = { path = "../../libs/lib-utils" }

# -- async
tokio = { version = "1", features = ["full"] }

# -- json
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# -- web
axum = { version = "0.7", features = ["macros"] }
tower-cookies = "0.10"

strum_macros = "0.25"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.8"
