[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-utils = { path = "../../libs/lib-utils" }

# -- async
tokio = { version = "1", features = ["full"] }

# -- formats
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
gpx = "0.10"
zip = "2.2.2"

# -- other
geo = "0.26"

# -- web
axum = { version = "0.8", features = ["macros", "multipart"] }
askama = "0.12"

